Added box shadow properties to contact details

--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@
              </div>   
              <div class="col-lg-6">
                   <h1 class="h2 border-bottom-style">Contact Details</h1>
-                  <button type="button" class="btn btn-light">+44 7733513586</button><br>
-                  <button type="button" class="btn btn-light">harpreetvirdi17594@gmail.com </button><br>
-                  <button type="button" class="btn btn-light">https://github.com/Harpreet17594/Bootstrap-Portfolio</button><br>
-                  <button type="button" class="btn btn-light">Twitter</button><br>
-                  <button type="button" class="btn btn-light">Spotify</button><br>
+                  <button type="button" class="btn btn-light box-shadow">+44 7733513586</button><br>
+                  <button type="button" class="btn btn-light box-shadow">harpreetvirdi17594@gmail.com </button><br>
+                  <button type="button" class="btn btn-light box-shadow">https://github.com/Harpreet17594/Bootstrap-Portfolio</button><br>
+                  <button type="button" class="btn btn-light box-shadow">Twitter</button><br>
+                  <button type="button" class="btn btn-light box-shadow">Spotify</button><br>
             
              </div>
         </div>
