--- a/index.html
+++ b/index.html
@@ -89,14 +89,12 @@
             <div class="col-lg-3 border-right-style">
                 <h1 class="h1 ">Work</h1>
             </div>
-            <div class="col-lg-9">
-                <!-- <img src="./images/horison.png" class="rounded" alt="Loading" height="500px" width="100%"/> -->
-            
+            <div class="col-lg-9">            
                 <div class="card  text-black" style="width: 100%; height: 500px; background-color: rgba(69, 189, 222, 0.8);">
-                    <img src="./images/horison.png" class="card-img" alt="Loading..." height="500px">
+                    <img src="./images/horison.png" class="card-img" alt="Horiseon" height="500px">
                     <div class="card-img-overlay">
                       <h5 class="card-title"><a href="https://harpreet17594.github.io/Horiseon/" target="_blank" class="font-style">Horiseon</a></h5>
-                      <p class="card-text font-style">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text font-style">Horiseon is a project which i have created.In the project i tried to make webpage optimized for search engine.</p>
                     </div>
                   </div>
             
@@ -115,15 +113,15 @@
             <div class="col-lg" style="height: 450px;">
                 <div class="card-group">
                     <div class="card">
-                      <img src="./images/prework.png" class="card-img-top" alt="...">
+                      <img src="./images/prework.png" class="card-img-top" alt="prework">
                       <div class="card-body">
                         <h5 class="card-title"><a href="https://harpreet17594.github.io/Myprework/" class="font-style" target="_blank">Prework</a></h5>
-                        <p class="card-text">This work i have done in the starting of the bootcamp.It shows how i can organize my wrk material which i get in the class.</p>
+                        <p class="card-text">This work i have done in the starting of the bootcamp.It shows how i can organize my work material which i get in the class.</p>
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                       </div>
                     </div>
                     <div class="card">
-                      <img src="./images/portfolio.png" class="card-img-top" alt="...">
+                      <img src="./images/portfolio.png" class="card-img-top" alt="portfolio">
                       <div class="card-body">
                         <h5 class="card-title"><a href="https://harpreet17594.github.io/My-Portfolio/" class="font-style" target="_blank">Portfolio html/css Design</a></h5>
                         <p class="card-text">Portfolio is the webpage i have designed which contains information about me. </p>
@@ -143,7 +141,7 @@
             <div class="col-lg" style="height: 450px;">
                 <div class="card-group">
                     <div class="card">
-                      <img src="./images/prework.png" class="card-img-top" alt="...">
+                      <img src="./images/prework.png" class="card-img-top" alt="prework">
                       <div class="card-body">
                         <h5 class="card-title"><a href="https://harpreet17594.github.io/Myprework/" class="font-style" target="_blank">Prework</a></h5>
                         <p class="card-text">This work i have done in the starting of the bootcamp.It shows how i can organize my wrk material which i get in the class.</p>
@@ -151,7 +149,7 @@
                       </div>
                     </div>
                     <div class="card">
-                      <img src="./images/portfolio.png" class="card-img-top" alt="...">
+                      <img src="./images/portfolio.png" class="card-img-top" alt="portfolio">
                       <div class="card-body">
                         <h5 class="card-title font-style">Portfolio Bootstrap Design</h5>
                         <p class="card-text">Portfolio is the webpage i have designed which contains information about me. </p>
