Updated size of grid sections added media queries

--- a/index.html
+++ b/index.html
@@ -173,7 +173,6 @@
             <div class="card-body">
               <h5 class="card-title"><a href="https://harpreet17594.github.io/Myprework/" class="font-style" target="_blank">Prework</a></h5>
               <p class="card-text">This work i have done in the starting of the bootcamp.It shows how i can organize my work material which i get in the class.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
           </div>
@@ -187,7 +186,6 @@
           <div class="card-body">
             <h5 class="card-title"><a href="https://harpreet17594.github.io/My-Portfolio/" class="font-style" target="_blank">My Portfolio</a></h5>
             <p class="card-text">This work i have done in the starting of the bootcamp.It shows how i can organize my work material which i get in the class.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
         </div>
@@ -207,9 +205,9 @@
                   <div class="card box-shadow">
                     <img src="./images/bootstrap-portfolio.png" class="card-img-top" alt="prework">
                     <div class="card-body">
-                      <h5 class="card-title"><a href="https://harpreet17594.github.io/Bootstrap-portfolio/" class="font-style" target="_blank">Bootstrap Portfolio</a></h5>
+                      <h5 class="card-title"><a href="https://harpreet17594.github.io/Bootstrap-Portfolio/" class="font-style" target="_blank">Bootstrap Portfolio</a></h5>
                       <p class="card-text">This work i have done in the starting of the bootcamp.It shows how i can organize my work material which i get in the class.</p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  
                     </div>
                   </div>
                   </div>
@@ -223,7 +221,6 @@
                   <div class="card-body">
                     <h5 class="card-title"><a href="https://harpreet17594.github.io/Myprework/" class="font-style" target="_blank">Prework</a></h5>
                     <p class="card-text">This work i have done in the starting of the bootcamp.It shows how i can organize my work material which i get in the class.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                   </div>
                 </div>
                 </div>
